--- a/src/app.scss
+++ b/src/app.scss
@@ -4,6 +4,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  text-decoration: none;
+}
+
 a {
     &:hover {
       text-decoration: none;
