--- a/src/pages/Search/Form/styles.scss
+++ b/src/pages/Search/Form/styles.scss
@@ -14,3 +14,96 @@
     height: 40px;
     padding-left: 15px;
 }
+
+.info-container {
+    padding: 23px 23px 27px 30px;
+    background: #F5F5F5;
+    margin-left: 90px;
+    margin-top: 55px;
+    margin-right: 100px;
+    border-radius: 16px;
+    display: flex;
+    height: 340px;
+}
+
+.info-img {
+    margin-right: 0px;
+}
+
+.user-details-image {
+    width: 284px;
+    height: 280px;
+}
+
+.btn-profile {
+    height: 40px;
+    width: 100px;
+    border-radius: 5px;
+    background: #1890FF;
+    align-items: center;
+    border: none;
+    color: #FFF;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 17px;
+}
+
+.info-data {
+    width: 100%;
+    margin-left: 45px;
+}
+
+.info-repo {
+    display: flex;
+}
+
+.info-repo p {
+    margin-right: 8px;
+    width: 118px;
+    height: 22px;
+    background: #FFFFFF;
+    border: 1px solid #D9D9D9;
+    box-sizing: border-box;
+    border-radius: 5px;
+    font-size: 12px;
+    padding: 1px 8px 1px 8px;
+    text-align: center;
+    margin-top: 0px;
+}
+
+.info-repo p:first-child {
+    width: 163px;
+}
+
+.info-details {
+
+    padding: 8px 16px 17px 15px;
+    height: 247px;
+    background: #FFFFFF;
+    border: 1px solid #D9D9D9;
+    box-sizing: border-box;
+    border-radius: 6px;
+}
+
+.info-details h1 {
+    margin-top: 0px;
+    font-weight: 500;
+    line-height: 28px;
+    color: #1890FF;
+}
+
+.info-details p {
+    background: #FFFFFF;
+    border: 1px solid #D9D9D9;
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding: 8px 10px 8px 10px;
+    font-style: normal;
+
+    font-size: 16px;
+    color: #737373;
+    margin-top: 0px;
+    margin-bottom: 5px;
+}
